[package]
name = "lexer-rs"
version = "0.1.15"
edition = "2021"
authors = ["jangryga <jangryga@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.192", features = [ "derive" ]}
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = { version ="0.2.88", features = ["serde-serialize"]}

[dependencies.web-sys]
version = "0.3.65"
features = [
  "console",
]